# Chimera

./: .gitignore  CMakeLists.txt  LICENSE  README  TPLsList.cmake
cmake/: Chimera_config.hpp.in  Dependencies.cmake
doc/: configure.sh
doc/build_notes/: configure.sh
doc/dissertation/document/: Makefile  dissertation.tex  references.bib
doc/dissertation/presentation/: Makefile  breakdown_histories.eps  breakdown_iterations.eps  breakdown_time.eps  ddmc_example.pdftex_t  defense.tex  heat_eq_setup.pdftex_t  ilut_iterations.eps  ilut_size.eps  practice_notes.txt  solver_iters.eps  solver_time.eps
doc/dissertation/umi_abstract/: umi_abstract.tex
doc/hmcsa_adjoint_vs_direct/: absorption_iters  absorption_iters.eps  absorption_time  absorption_time.eps  direct_vs_adjoint.tex  direct_vs_adjoint.xlsx  estimator_nh_iters  estimator_nh_iters.eps  estimator_nh_time  estimator_nh_time.eps  estimator_wc_iters  estimator_wc_iters.eps  estimator_wc_time  estimator_wc_time.eps  updated_direct_vs_adjoint.ods
doc/jcomp2012/: 3D_mesh_segment.fig  Adjoint_Direct_Convergence.eps  Adjoint_Direct_Iterations.eps  Makefile  T_multi_mat.eps  comments.txt  convergence.agr  dir_adj_conv.agr  dir_adj_conv.eps  dir_adj_cpu.eps  dir_adj_iterations.agr  figures.tex  jcomp2012.tex  marshak_10.eps  mesh.eps  mesh_cell.fig  mrshk_np_CPU.eps  mrshk_np_Ns.eps  mrshk_wc_CPU.eps  multi_mat.eps  novelty.txt  points.eps  poisson_cpu_time.eps  references.bib  response.txt  response_2.txt  seq_conv_100.agr  seq_conv_100.eps  seq_conv_500.agr  seq_conv_500.eps  seq_cpu.agr  seq_cpu.eps  seq_iterations.agr  seq_iterations.eps  spectral_radius.eps
doc/kaczmarz/python/: kaczmarz.py  mcsa_sketch.py  rep_kaczmarz.py
doc/mandc2013/notes/: Makefile  references.bib  spectral_theory.tex  stencil.fig
doc/mandc2013/presentation/: Makefile  leakage_error_2.eps  leakage_variation_2.eps  mandc_2013.tex  measured_length_2.eps  measured_spec_rad_2.eps  meeting_11_27.tex
doc/mandc2013/theory_paper/: Makefile  references.bib  slattery_wilson_evans.tex  slatterywilsonevans.ps  slatterywilsonevans.tex
doc/maximal_entropy/: merw_data.gnumeric
doc/me699/proposal/: Makefile  me699_proposal.tex  me699_propsal.tex  references.bib
doc/model_problems/: model_problems.tex  references.bib
doc/nonlinear/: nonlinear_benchmarks.gnumeric
doc/nonlinear/backwards_step/: BackwardStep.exo.4.0  (+4 more)
doc/parallel_verfication/: compare_flux.cpp
doc/parallel_verficiation/: compare_flux.cpp  parallel_verification.gnumeric
doc/serial_performance/: serial_performance.gnumeric
doc/spn/: Makefile  spn.tex
doc/thesis_proposal/: Makefile  references.bib  thesis_proposal.tex
doc/ttsp2013/: block_jacobi.fig.bak  ttsp_2013.tex
drivers/: CMakeLists.txt
drivers/NavierStokes/: CMakeLists.txt
drivers/NeutronDiffusion/: CMakeLists.txt  DiffusionProblem.cpp  DiffusionProblem.hpp  Mesh.cpp  Partitioner.cpp  Partitioner.hpp  VTKOutput.cpp  VTKOutput.hpp  input.xml  neutron_diffusion.cpp
drivers/PanzerPoisson/: CMakeLists.txt  main.cpp
drivers/TransientPoisson/: CMakeLists.txt  TransientPoisson_Aztec_main.cpp  TransientPoisson_BCStrategy_Dirichlet_Constant.hpp  TransientPoisson_BCStrategy_Dirichlet_Constant_impl.hpp  TransientPoisson_BCStrategy_Factory.hpp  TransientPoisson_Chimera_main.cpp  TransientPoisson_ClosureModelFactory.hpp  TransientPoisson_ClosureModelFactory_TemplateBuilder.hpp  TransientPoisson_ClosureModelFactory_impl.hpp  TransientPoisson_EquationSet.hpp  TransientPoisson_EquationSetFactory.hpp  TransientPoisson_EquationSet_impl.hpp  TransientPoisson_main.cpp
mesh/cmake/: Dependencies.cmake
mesh/src/: CMakeLists.txt  Mesh.cpp  Mesh.hpp  Partitioner.cpp  Partitioner.hpp  VTKOutput.cpp  VTKOutput.hpp  VTKWriter.cpp  VTKWriter.hpp
mesh/test/: CMakeLists.txt  tstMesh.cpp  tstPartitioner.cpp  tstVTKOutput.cpp  tstVTKWriter.cpp
solvers/: AdjointMC.cpp  AdjointMC.hpp  CMakeLists.txt  Chimera_AdjointMC.cpp  Chimera_JacobiPreconditioner.cpp  Chimera_JacobiPreconditioner.hpp  Chimera_MCSA.cpp  Chimera_MCSA.hpp  Chimera_OperatorTools.hpp  OperatorTools.cpp
solvers/cmake/: Dependencies.cmake
solvers/src/: CMakeLists.txt  IterativeSolver.hpp
solvers/test/: CMakeLists.txt  tstAnasazi.cpp  tstTpetra.cpp
src/: CMakeLists.txt  Chimera_AdjointMC.cpp  Chimera_AdjointMC.hpp  Chimera_AdjointMCDev.cpp  Chimera_AdjointMCDev.hpp  Chimera_AdjointNeumannUlamSolver.hpp  Chimera_AdjointNeumannUlamSolver_def.hpp  Chimera_Assertion.cpp  Chimera_Assertion.hpp  Chimera_BoostRNG.hpp  Chimera_DecompositionManager.hpp  Chimera_DirectMC.cpp  Chimera_DirectMC.hpp  Chimera_History.hpp  Chimera_HistoryBank.hpp  Chimera_HistoryBuffer.hpp  Chimera_HistoryBuffer_def.hpp  Chimera_History_def.hpp  Chimera_JacobiPreconditioner.cpp  Chimera_JacobiPreconditioner.hpp  Chimera_JacobiSplit.hpp  Chimera_JacobiSplit_def.hpp  Chimera_LinearOperatorSplit.hpp  Chimera_LinearOperatorSplitFactory.hpp  Chimera_LinearOperatorSplitFactory_def.hpp  Chimera_LinearProblem.hpp  Chimera_LinearProblem_def.hpp  Chimera_LinearSolver.hpp  Chimera_LinearSolverFactory_def.hpp  Chimera_MCSA.cpp  Chimera_MCSA.hpp  Chimera_MCSA_def.hpp  Chimera_NeumannUlamSolver.hpp  Chimera_NeumannUlamSolverFactory.hpp  Chimera_NeumannUlamSolverFactory_def.hpp  Chimera_OperatorTools.cpp  Chimera_OperatorTools.hpp  Chimera_OperatorTools_def.hpp  Chimera_OverlapManager.hpp  Chimera_OverlapManager_def.hpp  (+9 more)
test/: CMakeLists.txt  tstAdjointNeumannUlamSolver.cpp  tstAssertion.cpp  tstBoostRNG.cpp  tstHistory.cpp  tstHistoryBank.cpp  tstHistoryBuffer.cpp  tstJacobiSplit.cpp  tstLinearOperatorSplitFactory.cpp  tstLinearProblem.cpp  tstLinearSolverFactory.cpp  tstMCSA.cpp  tstOperatorTools.cpp  tstOverlapManager.cpp  tstSamplingTools.cpp  tstSequentialMC.cpp  tstStationaryIteration.cpp  tstStationarySolver.cpp
utils/cmake/: Dependencies.cmake
utils/src/: CMakeLists.txt  Exception.cpp  Exception.hpp  UnitTestHelpers.hpp
(+814 files in other folders)
